--- a/WebsiteReleaseHelper/MainWindow.xaml
+++ b/WebsiteReleaseHelper/MainWindow.xaml
@@ -16,7 +16,6 @@
             <RowDefinition Height="153*"/>
             <RowDefinition Height="49*"/>
         </Grid.RowDefinitions>
-        <Button Content="GetFiles" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" Grid.Row="1" Height="20"/>
         <GroupBox Grid.Row="0" Header="Первичная нода" Margin="10,10,10,9">
             <Grid Margin="10,10,8,7">
                 <Grid.ColumnDefinitions>
@@ -31,7 +30,7 @@
                 <Label Content="Постфикс папки архива" Margin="10,10,10,0" VerticalAlignment="Top"/>
             </Grid>
         </GroupBox>
-        <StatusBar Grid.Row="2" Grid.ColumnSpan="2" Margin="0,0,10,0"/>
+        <StatusBar Grid.Row="2" Grid.ColumnSpan="2"/>
         <Label Content="" Name="Label_StatusBarInfo" Margin="10,10,10,0" Grid.Row="2" VerticalAlignment="Top" Height="26" Grid.ColumnSpan="2"/>
 
     </Grid>
