--- a/WebsiteReleaseHelper/MainWindow.xaml
+++ b/WebsiteReleaseHelper/MainWindow.xaml
@@ -5,35 +5,34 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WebsiteReleaseHelper"
         mc:Ignorable="d"
-        Title="Сайтонакатор 3000" Height="450" Width="884" WindowStartupLocation="CenterScreen">
+        Title="Сайтонакатор 3000" Height="583" Width="608" WindowStartupLocation="CenterScreen">
     <Grid Margin="0,0,2,0">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="450*"/>
-            <ColumnDefinition Width="247*"/>
-            <ColumnDefinition Width="177*"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="47*"/>
-            <RowDefinition Height="140*"/>
-            <RowDefinition Height="183*"/>
-            <RowDefinition Height="49*"/>
+            <RowDefinition Height="31*"/>
+            <RowDefinition Height="133*"/>
+            <RowDefinition Height="80*"/>
+            <RowDefinition Height="32*"/>
         </Grid.RowDefinitions>
-        <GroupBox Grid.Row="1" Header="Первичная нода" Margin="10,7,10,10">
+        <GroupBox Grid.Row="1" Header="Управление нодами" Margin="10">
             <Grid Margin="10,10,8,7">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="57*"/>
-                    <ColumnDefinition Width="67*"/>
+                    <ColumnDefinition Width="247*"/>
+                    <ColumnDefinition Width="301*"/>
                 </Grid.ColumnDefinitions>
-                <Button Content="Архивировать файлы" Margin="10,10,10,0" VerticalAlignment="Top" Name="Button_ArhivePrimaryInstance" Click="Button_ArhivePrimaryInstance_OnClick" Grid.ColumnSpan="2"/>
-                <Button Content="Перенести задеплоенные файлы" Margin="10,35,10,0" VerticalAlignment="Top" Name="Button_CopyPrimaryNewFiles" Click="Button_CopyPrimaryNewFiles_OnClick" Grid.ColumnSpan="2" />
-                <Button Content="Открыть страницу ноды в веб-браузере" Margin="10,60,10,0" VerticalAlignment="Top" Name="Button_OpenPrimaryInstancePage" Click="Button_OpenPrimaryInstancePage_OnClick" Grid.ColumnSpan="2" />
+                <Button Content="Архивировать файлы" Margin="10,10,10,0" VerticalAlignment="Top" Name="Button_ArhivePrimaryInstance" Click="Button_ArhivePrimaryInstance_OnClick" Height="20" Grid.Column="1"/>
+                <Button Content="Перенести задеплоенные файлы" Margin="10,35,10,0" VerticalAlignment="Top" Name="Button_CopyPrimaryNewFiles" Click="Button_CopyPrimaryNewFiles_OnClick" Height="20" Grid.Column="1" />
+                <Button Content="Открыть страницы ноды в веб-браузере" Margin="10,60,10,0" VerticalAlignment="Top" Name="Button_OpenPrimaryInstancePage" Click="Button_OpenPrimaryInstancePage_OnClick" Height="20" Grid.Column="1" />
+                <ListBox Margin="10"/>
             </Grid>
         </GroupBox>
-        <StatusBar Grid.Row="3" Grid.ColumnSpan="3"/>
-        <Label Content="" Name="Label_StatusBarInfo" Margin="10,10,10,0" Grid.Row="3" VerticalAlignment="Top" Height="26" Grid.ColumnSpan="2"/>
-        <ProgressBar x:Name="ProgressBar_Common" Grid.Column="2" Margin="10" Grid.Row="3"/>
-        <TextBox Height="26" Margin="244,10,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" x:Name="TextBox_ArchiveFolderPostfix"/>
-        <Label Content="Постфикс папки архива" Margin="10,10,211,0" VerticalAlignment="Top" Height="26"/>
+        <StatusBar Grid.Row="3"/>
+        <Label Content="" Name="Label_StatusBarInfo" Margin="10,10,293,0" Grid.Row="3" VerticalAlignment="Top" Height="26"/>
+        <ProgressBar x:Name="ProgressBar_Common" Margin="838,10,-240,10" Grid.Row="3"/>
+        <TextBox Height="26" Margin="344,10,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" x:Name="TextBox_ArchiveFolderPostfix"/>
+        <Label Content="Постфикс папки архива" Margin="10,10,259,0" VerticalAlignment="Top" Height="26"/>
 
     </Grid>
 </Window>
