--- a/WebsiteReleaseHelper/MainWindow.xaml
+++ b/WebsiteReleaseHelper/MainWindow.xaml
@@ -8,31 +8,31 @@
         Title="Сайтонакатор 3000" Height="583" Width="608" WindowStartupLocation="CenterScreen">
     <Grid Margin="0,0,2,0">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="225*"/>
+            <ColumnDefinition Width="373*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="31*"/>
             <RowDefinition Height="133*"/>
-            <RowDefinition Height="80*"/>
-            <RowDefinition Height="32*"/>
+            <RowDefinition Height="92*"/>
+            <RowDefinition Height="20*"/>
         </Grid.RowDefinitions>
-        <GroupBox Grid.Row="1" Header="Управление нодами" Margin="10">
+        <GroupBox Grid.Row="1" Header="Управление нодами" Margin="10" Grid.Column="1">
             <Grid Margin="10,10,8,7">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="247*"/>
-                    <ColumnDefinition Width="301*"/>
+                    <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Button Content="Архивировать файлы" Margin="10,10,10,0" VerticalAlignment="Top" Name="Button_ArhivePrimaryInstance" Click="Button_ArhivePrimaryInstance_OnClick" Height="20" Grid.Column="1"/>
-                <Button Content="Перенести задеплоенные файлы" Margin="10,35,10,0" VerticalAlignment="Top" Name="Button_CopyPrimaryNewFiles" Click="Button_CopyPrimaryNewFiles_OnClick" Height="20" Grid.Column="1" />
-                <Button Content="Открыть страницы ноды в веб-браузере" Margin="10,60,10,0" VerticalAlignment="Top" Name="Button_OpenPrimaryInstancePage" Click="Button_OpenPrimaryInstancePage_OnClick" Height="20" Grid.Column="1" />
-                <ListBox Margin="10"/>
+                <Button Content="Архивировать файлы" Margin="10,10,10,0" VerticalAlignment="Top" Name="Button_ArhivePrimaryInstance" Click="Button_ArhivePrimaryInstance_OnClick" Height="20"/>
+                <Button Content="Перенести задеплоенные файлы" Margin="10,35,10,0" VerticalAlignment="Top" Name="Button_CopyPrimaryNewFiles" Click="Button_CopyPrimaryNewFiles_OnClick" Height="20" />
+                <Button Content="Открыть страницы ноды в веб-браузере" Margin="10,60,10,0" VerticalAlignment="Top" Name="Button_OpenPrimaryInstancePage" Click="Button_OpenPrimaryInstancePage_OnClick" Height="20" />
             </Grid>
         </GroupBox>
-        <StatusBar Grid.Row="3"/>
-        <Label Content="" Name="Label_StatusBarInfo" Margin="10,10,293,0" Grid.Row="3" VerticalAlignment="Top" Height="26"/>
-        <ProgressBar x:Name="ProgressBar_Common" Margin="838,10,-240,10" Grid.Row="3"/>
-        <TextBox Height="26" Margin="344,10,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" x:Name="TextBox_ArchiveFolderPostfix"/>
-        <Label Content="Постфикс папки архива" Margin="10,10,259,0" VerticalAlignment="Top" Height="26"/>
+        <StatusBar Grid.Row="3" Grid.ColumnSpan="2"/>
+        <Label Content="" Name="Label_StatusBarInfo" Grid.Row="2" Height="26" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
+        <ProgressBar x:Name="ProgressBar_Common" Margin="613.494,10,-240,10" Grid.Row="3" Grid.Column="1"/>
+        <TextBox Height="26" Margin="119.494,10,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" x:Name="TextBox_ArchiveFolderPostfix" Grid.Column="1"/>
+        <Label Content="Постфикс папки архива" Margin="10,10,259,0" VerticalAlignment="Top" Height="26" Grid.ColumnSpan="2"/>
+        <ListBox Margin="10,10,10,31" x:Name="ListBox_WebsiteNodes" SelectionChanged="ListBox_WebsiteNodes_OnSelectionChanged" Grid.Row="1" Grid.RowSpan="2"/>
 
     </Grid>
 </Window>
