--- a/WebsiteReleaseHelper/MainWindow.xaml
+++ b/WebsiteReleaseHelper/MainWindow.xaml
@@ -5,34 +5,53 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WebsiteReleaseHelper"
         mc:Ignorable="d"
-        Title="Сайтонакатор 3000" Height="583" Width="608" WindowStartupLocation="CenterScreen">
+        Title="Сайтонакатор 3000" Height="632.407" Width="608" WindowStartupLocation="CenterScreen">
     <Grid Margin="0,0,2,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="225*"/>
             <ColumnDefinition Width="373*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="31*"/>
-            <RowDefinition Height="133*"/>
-            <RowDefinition Height="92*"/>
-            <RowDefinition Height="20*"/>
+            <RowDefinition Height="214"/>
+            <RowDefinition/>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
-        <GroupBox Grid.Row="1" Header="Управление нодами" Margin="10" Grid.Column="1">
+        <GroupBox Header="Этапы наката" Margin="10,10,10,13" Grid.Column="1">
             <Grid Margin="10,10,8,7">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Button Content="Архивировать файлы" Margin="10,10,10,0" VerticalAlignment="Top" Name="Button_ArhivePrimaryInstance" Click="Button_ArhivePrimaryInstance_OnClick" Height="20"/>
-                <Button Content="Перенести задеплоенные файлы" Margin="10,35,10,0" VerticalAlignment="Top" Name="Button_CopyPrimaryNewFiles" Click="Button_CopyPrimaryNewFiles_OnClick" Height="20" />
-                <Button Content="Открыть страницы ноды в веб-браузере" Margin="10,60,10,0" VerticalAlignment="Top" Name="Button_OpenPrimaryInstancePage" Click="Button_OpenPrimaryInstancePage_OnClick" Height="20" />
+                <Button Content="1. Архивировать файлы" Margin="10,10,10,0" VerticalAlignment="Top" Name="Button_ArhivePrimaryInstance" Click="Button_ArhivePrimaryInstance_OnClick" Height="20"/>
+                <Button Content="2. Перенести задеплоенные файлы" Margin="10,35,10,0" VerticalAlignment="Top" Name="Button_CopyPrimaryNewFiles" Click="Button_CopyPrimaryNewFiles_OnClick" Height="20" />
+                <Button Content="3. Открыть страницы ноды в веб-браузере" Margin="10,60,10,0" VerticalAlignment="Top" Name="Button_OpenPrimaryInstancePage" Click="Button_OpenPrimaryInstancePage_OnClick" Height="20" />
+                <Label Content="Постфикс папки архива" Margin="10,85,10,0" VerticalAlignment="Top" Height="26"/>
+                <TextBox Height="26" Margin="10,116,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" x:Name="TextBox_ArchiveFolderPostfix"/>
             </Grid>
         </GroupBox>
         <StatusBar Grid.Row="3" Grid.ColumnSpan="2"/>
-        <Label Content="" Name="Label_StatusBarInfo" Grid.Row="2" Height="26" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-        <ProgressBar x:Name="ProgressBar_Common" Margin="613.494,10,-240,10" Grid.Row="3" Grid.Column="1"/>
-        <TextBox Height="26" Margin="119.494,10,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" x:Name="TextBox_ArchiveFolderPostfix" Grid.Column="1"/>
-        <Label Content="Постфикс папки архива" Margin="10,10,259,0" VerticalAlignment="Top" Height="26" Grid.ColumnSpan="2"/>
-        <ListBox Margin="10,10,10,31" x:Name="ListBox_WebsiteNodes" SelectionChanged="ListBox_WebsiteNodes_OnSelectionChanged" Grid.Row="1" Grid.RowSpan="2"/>
+        <Label Content="" Name="Label_StatusBarInfo" Grid.Row="2" Grid.ColumnSpan="2" Margin="0,4,0,0"/>
+        <ProgressBar x:Name="ProgressBar_Common" Margin="613,10,-240,10" Grid.Row="3" Grid.Column="1"/>
+        <ListBox Margin="10,41,10,10" x:Name="ListBox_WebsiteNodes" SelectionChanged="ListBox_WebsiteNodes_OnSelectionChanged" Grid.RowSpan="2"/>
+        <GroupBox Grid.Column="1" Header="Информация о ноде" Margin="10" Grid.Row="1">
+            <Grid Margin="10,10,9,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="66*"/>
+                    <ColumnDefinition Width="95*"/>
+                </Grid.ColumnDefinitions>
+                <Label Content="Название:" Margin="10,10,10,0" VerticalAlignment="Top" Height="26"/>
+                <TextBlock Margin="11,15,10,0" Name="TextBlock_DisplayableName" Background="#FFE6E6E6" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.Column="1" Height="16"/>
+                <Label Content="Папка деплоя:" Margin="10,41,10,0" VerticalAlignment="Top" Height="26" Grid.ColumnSpan="2"/>
+                <TextBlock Name="TextBlock_DeployDirectoryPath" Background="#FFE6E6E6" Margin="10,72,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                <Label Content="Папка сайта:" Margin="10,93,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                <TextBlock Margin="10,124,10,0" Name="TextBlock_WebsiteRootPath" Background="#FFE6E6E6" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                <Label Content="Урлы сайта" Margin="10,145,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                <TextBlock Background="#FFE6E6E6" Margin="10,176,10,0" Name="TextBlock_WebsiteUrls" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                <Button Content="Открыть папку деплоя" Name="Button_OpenDeployDirectory" Margin="10,197,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Click="Button_OpenDeployDirectory_OnClick"/>
+                <Button Content="Открыть папку сайта" Name="Button_OpenWebsiteDirectory" Margin="10,222,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Click="Button_OpenWebsiteDirectory_OnClick"/>
+            </Grid>
+        </GroupBox>
+        <Label Content="Список нод" Margin="10,10,10,0" VerticalAlignment="Top" Height="26"/>
 
     </Grid>
 </Window>
