--- a/WebsiteReleaseHelper/MainWindow.xaml
+++ b/WebsiteReleaseHelper/MainWindow.xaml
@@ -52,16 +52,7 @@
             </Grid>
         </GroupBox>
         <Label Content="Список нод" Margin="10,10,10,0" VerticalAlignment="Top" Height="26"/>
-        <ProgressBar x:Name="ProgressBar_Common" RenderTransformOrigin="0.5,0.5" Margin="11,9,8,6" Grid.Row="2" Grid.ColumnSpan="2">
-            <ProgressBar.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </ProgressBar.RenderTransform>
-        </ProgressBar>
+        <ProgressBar x:Name="ProgressBar_Common" RenderTransformOrigin="0.5,0.5" Margin="10,9,10,6" Grid.Row="2" Grid.ColumnSpan="2"/>
 
     </Grid>
 </Window>
