--- a/WebsiteReleaseHelper/MainWindow.xaml
+++ b/WebsiteReleaseHelper/MainWindow.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WebsiteReleaseHelper"
         mc:Ignorable="d"
-        Title="Сайтонакатор 3000" MinHeight="633" Height="556.419" MinWidth="608" Width="608" WindowStartupLocation="CenterScreen">
+        Title="Сайтонакатор 3000" MinHeight="633" Height="748.654" MinWidth="608" Width="608" WindowStartupLocation="CenterScreen">
     <Grid Margin="0,0,2,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="225*"/>
             <ColumnDefinition Width="373*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="214"/>
+            <RowDefinition Height="263"/>
             <RowDefinition/>
             <RowDefinition Height="35"/>
             <RowDefinition Height="40"/>
@@ -20,13 +20,21 @@
         <GroupBox Header="Этапы наката" Margin="10,10,10,13" Grid.Column="1">
             <Grid Margin="10,10,8,7">
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="68"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Button Content="1. Архивировать файлы" Margin="10,10,10,0" VerticalAlignment="Top" Name="Button_ArhivePrimaryInstance" Click="Button_ArhivePrimaryInstance_OnClick" Height="20"/>
-                <Button Content="2. Перенести задеплоенные файлы" Margin="10,35,10,0" VerticalAlignment="Top" Name="Button_CopyPrimaryNewFiles" Click="Button_CopyPrimaryNewFiles_OnClick" Height="20" />
-                <Button Content="3. Открыть страницы ноды в веб-браузере" Margin="10,60,10,0" VerticalAlignment="Top" Name="Button_OpenPrimaryInstancePage" Click="Button_OpenPrimaryInstancePage_OnClick" Height="20" />
-                <Label Content="Постфикс папки архива" Margin="10,85,10,0" VerticalAlignment="Top" Height="26"/>
-                <TextBox Height="26" Margin="10,116,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" x:Name="TextBox_ArchiveFolderPostfix"/>
+                <Button Content="Архивировать файлы" Margin="10,45,10,0" VerticalAlignment="Top" Name="Button_ArhivePrimaryInstance" Click="Button_ArhivePrimaryInstance_OnClick" Height="20" Grid.Column="1"/>
+                <Button Content="Перенести задеплоенные файлы" Margin="10,115,10,0" VerticalAlignment="Top" Name="Button_CopyPrimaryNewFiles" Click="Button_CopyPrimaryNewFiles_OnClick" Height="20" Grid.Column="1" />
+                <Button Content="Открыть страницы ноды в веб-браузере" Margin="10,177,10,0" VerticalAlignment="Top" Name="Button_OpenPage" Click="Button_OpenPrimaryInstancePage_OnClick" Height="20" Grid.Column="1" />
+                <Label Content="Постфикс папки архива" Margin="10,70,170,0" VerticalAlignment="Top" Height="26" Grid.ColumnSpan="2"/>
+                <TextBox Height="26" Margin="89.788,70,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" x:Name="TextBox_ArchiveFolderPostfix" Grid.Column="1"/>
+                <Button Content="Остановить сервер IIS" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="235" Name="Button_StopIIS" Grid.Column="1" Click="Button_StopIIS_OnClick"/>
+                <Button Content="Запустить сервер IIS" Margin="10,146,10,0" VerticalAlignment="Top" Grid.Column="1" Name="Button_StartIIS" Click="Button_StartIIS_OnClick"/>
+                <Label Content="Шаг 0" Margin="10,7,10,0" VerticalAlignment="Top"/>
+                <Label Content="Шаг 1" Margin="10,42,10,0" VerticalAlignment="Top"/>
+                <Label Content="Шаг 2" Margin="10,112,10,0" VerticalAlignment="Top"/>
+                <Label Content="Шаг 3" Margin="10,143,10,0" VerticalAlignment="Top"/>
+                <Label Content="Шаг 4" Margin="10,174,10,0" VerticalAlignment="Top"/>
             </Grid>
         </GroupBox>
         <StatusBar Grid.Row="3" Grid.ColumnSpan="2">
@@ -40,15 +48,17 @@
                     <ColumnDefinition Width="95*"/>
                 </Grid.ColumnDefinitions>
                 <Label Content="Название:" Margin="10,10,10,0" VerticalAlignment="Top" Height="26" Grid.ColumnSpan="2"/>
-                <TextBlock Margin="10,36,10,0" Name="TextBlock_DisplayableName" Background="#FFE6E6E6" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="16" Grid.ColumnSpan="2"/>
+                <TextBlock Margin="10,36,10,0" Name="TextBlock_DisplayableName" Background="#FFE6E6E6" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Height="16" Grid.ColumnSpan="2"/>
                 <Label Content="Папка деплоя:" Margin="10,57,10,0" VerticalAlignment="Top" Height="26" Grid.ColumnSpan="2"/>
-                <TextBlock Name="TextBlock_DeployDirectoryPath" Background="#FFE6E6E6" Margin="10,83,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                <TextBlock Name="TextBlock_DeployDirectoryPath" Background="#FFE6E6E6" Margin="10,83,10,0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
                 <Label Content="Папка сайта:" Margin="10,104,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-                <TextBlock Margin="10,130,10,0" Name="TextBlock_WebsiteRootPath" Background="#FFE6E6E6" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                <TextBlock Margin="10,130,10,0" Name="TextBlock_WebsiteRootPath" Background="#FFE6E6E6" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
                 <Label Content="Урлы сайта" Margin="10,151,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-                <TextBlock Background="#FFE6E6E6" Margin="10,177,10,0" Name="TextBlock_WebsiteUrls" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-                <Button Content="Открыть папку деплоя" Name="Button_OpenDeployDirectory" Margin="10,198,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Click="Button_OpenDeployDirectory_OnClick"/>
-                <Button Content="Открыть папку сайта" Name="Button_OpenWebsiteDirectory" Margin="10,223,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Click="Button_OpenWebsiteDirectory_OnClick"/>
+                <TextBlock Background="#FFE6E6E6" Margin="10,177,10,0" Name="TextBlock_WebsiteUrls" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                <Button Content="Открыть папку деплоя" Name="Button_OpenDeployDirectory" Margin="10,0,10,35" VerticalAlignment="Bottom" Grid.ColumnSpan="2" Click="Button_OpenDeployDirectory_OnClick"/>
+                <Button Content="Открыть папку сайта" Name="Button_OpenWebsiteDirectory" Margin="10,0,10,10" VerticalAlignment="Bottom" Grid.ColumnSpan="2" Click="Button_OpenWebsiteDirectory_OnClick"/>
+                <Label Content="Имя сервера IIS" Margin="10,198,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                <TextBlock Background="#FFE6E6E6" Margin="10,224,10,0" x:Name="TextBlock_ServerMachineName" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
             </Grid>
         </GroupBox>
         <Label Content="Список нод" Margin="10,10,10,0" VerticalAlignment="Top" Height="26"/>
